--- a/src/WebApps/WebSPA/Dockerfile
+++ b/src/WebApps/WebSPA/Dockerfile
@@ -14,9 +14,7 @@ COPY /src/WebApps/WebSPA/package.json /usr/src/app/package.json
 RUN npm install
 RUN npm install react-scripts@1.1.1 -g
 
-COPY ./src/WebApps/WebSPA/ /usr/src/app
-
-RUN npm run build
+COPY /src/WebApps/WebSPA/ /usr/src/app
 
 # start app
 CMD ["npm", "start"]
