--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,10 +33,13 @@ jobs:
       # deploy the image
       - run: |
          docker login --username=$HEROKU_USERNAME --password=$HEROKU_API_KEY registry.heroku.com
+         docker tag tensor-snake/identity.api registry.heroku.com/$HEROKU_IDENTITY_API_NAME/web
+         docker push registry.heroku.com/$HEROKU_IDENTITY_API_NAME/web
          docker tag tensor-snake/webspa registry.heroku.com/$HEROKU_WEB_SPA_NAME/web
          docker push registry.heroku.com/$HEROKU_WEB_SPA_NAME/web
 
       # release images 
       - run: |
+         heroku container:release web --app $HEROKU_IDENTITY_API_NAME
          heroku container:release web --app $HEROKU_WEB_SPA_NAME
-      
+       
