--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,4 +6,12 @@ services:
       - NODE_ENV=production
     ports:
       - '3000:3000'
+
+  identity.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - NpgConnectionString=${TENSOR_SNAKE_IDENTITY_DB:-User ID = postgres;Password=56;Server=172.31.224.1;Port=5432;Database=TensorSnake.identity.db;Integrated Security=true; Pooling=true}
+      - SpaClient=https://tensor-snake-web-spa.herokuapp.com/
+    ports:
+      - "3105:80"
     
