--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,12 @@ services:
     volumes:
       - './src/WebApps/WebSPA:/usr/src/app'
       - '/usr/src/app/node_modules'
+    depends_on:
+      - identity.api
+
+  identity.api:
+    image: tensor-snake/identity.api
+    build:
+      context: .
+      dockerfile: src/Services/Identity/Identity.API/Dockerfile
+
