--- a/src/WebApps/WebSPA/package.json
+++ b/src/WebApps/WebSPA/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "client-oauth2": "^4.2.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
