--- a/src/Services/Identity/Identity.API/appsettings.json
+++ b/src/Services/Identity/Identity.API/appsettings.json
@@ -2,6 +2,7 @@
   "NpgConnectionString": "User ID = postgres;Password=56;Server=172.31.224.1;Port=5432;Database=TensorSnake.identity.db;Integrated Security=true; Pooling=true",
   "IsClusterEnv": "False",
   "SpaClient": "http://localhost:3000",
+  "ScoreApi": "http://localhost:3001",
   "UseCustomizationData": false,
   "Logging": {
     "IncludeScopes": false,
