--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.2'
+version: '3.4'
 
 services:
   webspa:
@@ -11,10 +11,20 @@ services:
       - '/usr/src/app/node_modules'
     depends_on:
       - identity.api
+      - score.api
 
   identity.api:
     image: tensor-snake/identity.api
     build:
       context: .
       dockerfile: src/Services/Identity/Identity.API/Dockerfile
+
+  score.api:
+    image: tensor-snake/score.api
+    build:
+      context: .
+      dockerfile: src/Services/Scores/Score.API/Dockerfile
+
+    depends_on:
+      - identity.api
 
