Add redux and global loading to spa app.

--- a/src/WebApps/WebSPA/.env
+++ b/src/WebApps/WebSPA/.env
@@ -1,3 +1,4 @@
+REACT_APP_SCORE_API_URL=https://tensor-snake-score-api.herokuapp.com
 REACT_APP_API_URL=https://tensor-snake-identity-api.herokuapp.com
 REACT_APP_CLIENT_ID=spa
 REACT_APP_CLIENT_SECRET=secret
