--- a/src/WebApps/WebSPA/package.json
+++ b/src/WebApps/WebSPA/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "client-oauth2": "^4.2.1",
+    "http-status-codes": "^1.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
